# Pore2Chip

./: .buildinfo  .gitignore  CITATION.cff  DISCLAIMER.md  LICENSE.md  README.md  coordination_api.html  export_api.html  filter_im_api.html  generate_api.html  genindex.html  index.html  install.html  io_api.html  metrics_api.html  module_ref.html  objects.inv  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  tahoma.sh
.doctrees/: coordination_api.doctree  environment.pickle  export_api.doctree  filter_im_api.doctree  generate_api.doctree  index.doctree  install.doctree  io_api.doctree  metrics_api.doctree  module_ref.doctree  quickstart.doctree
.github/workflows/: documentation.yml  draft_pdf.yml
_sources/: coordination_api.rst.txt  export_api.rst.txt  generate_api.rst.txt  install.rst.txt  io_api.rst.txt  metrics_api.rst.txt  module_ref.rst.txt  quickstart.rst.txt
docs/source/: conf.py  filter_im_api.rst  generate_api.rst  index.rst  install.rst  metrics_api.rst
example_outputs/: README.md  micromodel.npy  network.dxf
example_outputs/flow/: numerical_solution.npz  pinn_model_hl-3_nn-20_lr-0.001_epoch-2000.pkl  pinn_solution.npz
examples/: README.md  example_1_50x50_to_model.ipynb  example_2_100x100_to_model.ipynb  example_3_model_properties.ipynb  example_4_porespy_analysis.ipynb  example_5_vtk_exporting.ipynb  example_6_flow_2d_numerical_on_XCT.ipynb  example_7_flow_2d_pinn_on_XCT.ipynb
examples/bean_bucket_100/: Bean Bucket 8bit image0000.tif  Bean Bucket 8bit image0001.tif  Bean Bucket 8bit image0002.tif  Bean Bucket 8bit image0003.tif  Bean Bucket 8bit image0004.tif  Bean Bucket 8bit image0005.tif  Bean Bucket 8bit image0006.tif  Bean Bucket 8bit image0007.tif  Bean Bucket 8bit image0008.tif  Bean Bucket 8bit image0009.tif  Bean Bucket 8bit image0010.tif  Bean Bucket 8bit image0011.tif  Bean Bucket 8bit image0012.tif  Bean Bucket 8bit image0013.tif  Bean Bucket 8bit image0014.tif  Bean Bucket 8bit image0015.tif  Bean Bucket 8bit image0016.tif  Bean Bucket 8bit image0017.tif  Bean Bucket 8bit image0018.tif  Bean Bucket 8bit image0019.tif  Bean Bucket 8bit image0020.tif  Bean Bucket 8bit image0021.tif  Bean Bucket 8bit image0022.tif  (+77 more)
paper/: paper.bib  paper.md
src/: README.md
src/flow/: README.md  (+2 more)
tests/: README.md  test_coordination.py  test_export.py  test_filter_im.py  test_flow.py  test_generate.py  test_metrics.py  test_train_pinn.py
(+12 files in other folders)
